<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:id="@+id/tv_camera"
        android:background="@drawable/tv_bg"
        android:text="@string/camera"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:background="@drawable/tv_bg"
        android:id="@+id/tv_photo"
        android:text="@string/photo"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:id="@+id/tv_cancel"
        android:background="@drawable/tv_bg"
        android:text="@string/cancel"
        android:gravity="center"/>
</LinearLayout>