<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp5"
                tools:context=".activity.CommentActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp5">
        <RelativeLayout
            android:padding="@dimen/dp6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/dp60"
                android:layout_height="@dimen/dp60"
                android:src="@color/bg_gray"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/portrait"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_marginTop="@dimen/dp5"
                android:src="@mipmap/user"
                android:layout_width="@dimen/dp50"
                android:layout_height="@dimen/dp50"/>

            <TextView
                android:layout_marginBottom="@dimen/dp10"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_toRightOf="@id/portrait"
                android:id="@+id/tv_uid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hl"/>
            <TextView
                android:gravity="bottom"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_below="@id/tv_uid"
                android:layout_toRightOf="@id/portrait"
                android:id="@+id/tv_stamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stamp"/>
            <TextView
                android:layout_marginTop="@dimen/dp10"
                android:layout_below="@id/portrait"
                android:id="@+id/tv_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>



</RelativeLayout>